llvm/test/MC/RISCV/xsmtvdotii-invalid.s
// NOTE: Assertions have been autogenerated by utils/update_mc_test_checks.py UTC_ARGS: --version 5
# RUN: not llvm-mc -triple riscv64 -mattr=+xsmtvdotii < %s 2>&1 \
# RUN:     | FileCheck -check-prefixes=CHECK-ERROR %s

smt.vmadot v3, v2, v0, i4
// CHECK-ERROR: :[[@LINE-1]]:12: error: invalid operand for instruction{{$}}

smt.vmadot v2, v2, v0, i4
// CHECK-ERROR: :[[@LINE-1]]:12: error: the destination vector register group cannot overlap the source vector register group{{$}}

smt.vmadot v0, v2, v0, i4
// CHECK-ERROR: :[[@LINE-1]]:12: error: the destination vector register group cannot overlap the source vector register group{{$}}

smt.vmadot v2, v3, v0, i4
// CHECK-ERROR: :[[@LINE-1]]:12: error: the destination vector register group cannot overlap the source vector register group{{$}}

smt.vmadot v2, v4, v0, fp16
// CHECK-ERROR: :[[@LINE-1]]:24: error: This Inst only supports i4 and i8, i8 is the default type

smt.vmadot1 v3, v2, v4, i8
// CHECK-ERROR: :[[@LINE-1]]:13: error: invalid operand for instruction{{$}}

smt.vmadot1 v0, v3, v4, i8
// CHECK-ERROR: :[[@LINE-1]]:17: error: invalid operand for instruction{{$}}

smt.vmadot1 v2, v2, v4, i8
// CHECK-ERROR: :[[@LINE-1]]:13: error: the destination vector register group cannot overlap the source vector register group{{$}}

smt.vmadot1 v4, v2, v4, i8
// CHECK-ERROR: :[[@LINE-1]]:13: error: the destination vector register group cannot overlap the source vector register group{{$}}

smt.vmadot1 v0, v2, v4, i4
// CHECK-ERROR: :[[@LINE-1]]:25: error: smt.vmadot with slide only supports i8 type{{$}}

smt.vmadot1 v0, v2, v4, fp16
// CHECK-ERROR: :[[@LINE-1]]:25: error: smt.vmadot with slide only supports i8 type{{$}}

smt.vmadot.sp v3, v2, v8, v0, 3, i4
// CHECK-ERROR: :[[@LINE-1]]:15: error: invalid operand for instruction{{$}}

smt.vmadot.sp v2, v3, v8, v0, 3, i4
// CHECK-ERROR: :[[@LINE-1]]:19: error: invalid operand for instruction{{$}}

smt.vmadot.sp v2, v2, v8, v0, 3, i4
// CHECK-ERROR: :[[@LINE-1]]:15: error: the destination vector register group cannot overlap the source vector register group{{$}}

smt.vmadot.sp v8, v2, v8, v0, 1, i4
// CHECK-ERROR: :[[@LINE-1]]:15: error: the destination vector register group cannot overlap the source vector register group{{$}}

smt.vmadot.sp v0, v2, v8, v0, 3, i4
// CHECK-ERROR: :[[@LINE-1]]:15: error: invalid operand for instruction{{$}}

smt.vmadot.sp v2, v0, v8, v1, 3, i4
// CHECK-ERROR: :[[@LINE-1]]:19: error: invalid operand for instruction{{$}}

smt.vmadot.sp v2, v4, v0, v1, 3, i4
// CHECK-ERROR: :[[@LINE-1]]:23: error: invalid operand for instruction{{$}}

smt.vmadot.sp v2, v4, v1, v1, 3, i4
// CHECK-ERROR: :[[@LINE-1]]:23: error: invalid operand for instruction{{$}}

smt.vmadot.sp v2, v4, v8, v3, 3, i4
// CHECK-ERROR: :[[@LINE-1]]:27: error: invalid operand for instruction{{$}}

smt.vmadot.sp v2, v4, v8, v1, 4, i4
// CHECK-ERROR: :[[@LINE-1]]:31: error: immediate must be an integer in the range [0, 3]{{$}}

smt.vmadot.hp v2, v2, v8, v0, 4, i4
// CHECK-ERROR: :[[@LINE-1]]:15: error: the destination vector register group cannot overlap the source vector register group{{$}}

smt.vmadot.hp v8, v2, v8, v0, 5, i4
// CHECK-ERROR: :[[@LINE-1]]:15: error: the destination vector register group cannot overlap the source vector register group{{$}}

smt.vmadot.hp v0, v4, v8, v0, 3, i4
// CHECK-ERROR: :[[@LINE-1]]:15: error: invalid operand for instruction{{$}}

smt.vmadot.hp v2, v0, v8, v0, 3, i4
// CHECK-ERROR: :[[@LINE-1]]:19: error: invalid operand for instruction{{$}}

smt.vmadot.hp v8, v2, v0, v0, 5, i4
// CHECK-ERROR: :[[@LINE-1]]:23: error: invalid operand for instruction{{$}}

smt.vmadot.hp v2, v4, v8, v2, 3, i4
// CHECK-ERROR: :[[@LINE-1]]:27: error: invalid operand for instruction{{$}}

smt.vmadot.hp v2, v2, v8, v0, 8, i4
// CHECK-ERROR: :[[@LINE-1]]:31: error: immediate must be an integer in the range [0, 7]

smt.vfwmadot v3, v4, v2, fp16
// CHECK-ERROR: :[[@LINE-1]]:14: error: invalid operand for instruction{{$}}

smt.vfwmadot v4, v4, v2, fp16
// CHECK-ERROR: :[[@LINE-1]]:14: error: the destination vector register group cannot overlap the source vector register group{{$}}

smt.vfwmadot v2, v4, v2, fp16
// CHECK-ERROR: :[[@LINE-1]]:14: error: the destination vector register group cannot overlap the source vector register group{{$}}

smt.vfwmadot v2, v3, v4, fp16
// CHECK-ERROR: :[[@LINE-1]]:14: error: the destination vector register group cannot overlap the source vector register group{{$}}

smt.vfwmadot v2, v4, v3, fp16
// CHECK-ERROR: :[[@LINE-1]]:14: error: the destination vector register group cannot overlap the source vector register group{{$}}

smt.vfwmadot v4, v2, v3, i8
// CHECK-ERROR: :[[@LINE-1]]:26: error: This Inst only supports bfp16 and fp16

smt.vfwmadot1 v3, v2, v4, fp16
// CHECK-ERROR: :[[@LINE-1]]:15: error: invalid operand for instruction{{$}}

smt.vfwmadot1 v2, v3, v4, fp16
// CHECK-ERROR: :[[@LINE-1]]:19: error: invalid operand for instruction{{$}}

smt.vfwmadot1 v2, v2, v4, fp16
// CHECK-ERROR: :[[@LINE-1]]:15: error: the destination vector register group cannot overlap the source vector register group{{$}}

smt.vfwmadot1 v4, v2, v4, fp16
// CHECK-ERROR: :[[@LINE-1]]:15: error: the destination vector register group cannot overlap the source vector register group{{$}}

smt.vfwmadot1 v2, v3, v4, fp16
// CHECK-ERROR: :[[@LINE-1]]:19: error: invalid operand for instruction{{$}}

smt.vfwmadot1 v2, v4, v3, fp16
// CHECK-ERROR: :[[@LINE-1]]:15: error: the destination vector register group cannot overlap the source vector register group{{$}}

smt.vfwmadot1 v0, v2, v4, i8
// CHECK-ERROR: :[[@LINE-1]]:27: error: This Inst only supports bfp16 and fp16

smt.vnpack.vv v3, v3, v5, 1
// CHECK-ERROR: :[[@LINE-1]]:15: error: the destination vector register group cannot overlap the source vector register group{{$}}

smt.vnpack.vv v5, v3, v5, 1
// CHECK-ERROR: :[[@LINE-1]]:15: error: the destination vector register group cannot overlap the source vector register group{{$}}

smt.vnpack.vv v1, v3, v5, 4
// CHECK-ERROR: :[[@LINE-1]]:27: error: immediate must be an integer in the range [0, 3]{{$}}

smt.vnspack.vv v3, v3, v5, 1
// CHECK-ERROR: :[[@LINE-1]]:16: error: the destination vector register group cannot overlap the source vector register group{{$}}

smt.vnspack.vv v5, v3, v5, 1
// CHECK-ERROR: :[[@LINE-1]]:16: error: the destination vector register group cannot overlap the source vector register group{{$}}

smt.vnspack.vv v1, v3, v5, 4
// CHECK-ERROR: :[[@LINE-1]]:28: error: immediate must be an integer in the range [0, 3]{{$}}

smt.vnpack4.vv v3, v3, v5, 1
// CHECK-ERROR: :[[@LINE-1]]:16: error: the destination vector register group cannot overlap the source vector register group{{$}}

smt.vnpack4.vv v5, v3, v5, 1
// CHECK-ERROR: :[[@LINE-1]]:16: error: the destination vector register group cannot overlap the source vector register group{{$}}

smt.vnpack4.vv v1, v3, v5, 4
// CHECK-ERROR: :[[@LINE-1]]:28: error: immediate must be an integer in the range [0, 3]{{$}}

smt.vnspack.vv v3, v3, v5, 1
// CHECK-ERROR: :[[@LINE-1]]:16: error: the destination vector register group cannot overlap the source vector register group{{$}}

smt.vnspack.vv v5, v3, v5, 1
// CHECK-ERROR: :[[@LINE-1]]:16: error: the destination vector register group cannot overlap the source vector register group{{$}}

smt.vnspack.vv v1, v3, v5, 4
// CHECK-ERROR: :[[@LINE-1]]:28: error: immediate must be an integer in the range [0, 3]{{$}}

smt.vpack.vv v3, v2, v4, 1
// CHECK-ERROR: :[[@LINE-1]]:14: error: invalid operand for instruction{{$}}

smt.vpack.vv v2, v2, v4, 1
// CHECK-ERROR: :[[@LINE-1]]:14: error: the destination vector register group cannot overlap the source vector register group{{$}}

smt.vpack.vv v4, v2, v4, 1
// CHECK-ERROR: :[[@LINE-1]]:14: error: the destination vector register group cannot overlap the source vector register group{{$}}

smt.vpack.vv v0, v1, v4, 1
// CHECK-ERROR: :[[@LINE-1]]:14: error: the destination vector register group cannot overlap the source vector register group{{$}}

smt.vpack.vv v0, v2, v4, 4
// CHECK-ERROR: :[[@LINE-1]]:26: error: immediate must be an integer in the range [0, 3]{{$}}

smt.vupack.vv v3, v2, v4, 1
// CHECK-ERROR: :[[@LINE-1]]:15: error: invalid operand for instruction{{$}}

smt.vupack.vv v2, v2, v4, 1
// CHECK-ERROR: :[[@LINE-1]]:15: error: the destination vector register group cannot overlap the source vector register group{{$}}

smt.vupack.vv v4, v2, v4, 1
// CHECK-ERROR: :[[@LINE-1]]:15: error: the destination vector register group cannot overlap the source vector register group{{$}}

smt.vupack.vv v0, v1, v4, 1
// CHECK-ERROR: :[[@LINE-1]]:15: error: the destination vector register group cannot overlap the source vector register group{{$}}

smt.vupack.vv v0, v2, v4, 4
// CHECK-ERROR: :[[@LINE-1]]:27: error: immediate must be an integer in the range [0, 3]{{$}}
